# mastermind

./: .env.example  .gitignore  .gitmodules  README.md  ctf_prompt.yaml  mastermind.manifest.json  pyproject.toml  requirements.txt  spec.md
 playground/: package.json  qd-ctf-simulator.jsx
experiments/: final_report.json
playground/: README.md  index.html  main.jsx  package-lock.json  qd-ctf-simulator.jsx
scripts/: RUN_QWEN36_VANILLA_VS_SFT_EVAL100.md  RUN_SFT_WARM_GRPO_TARGETED_NONPASS.md  aidp_anthropic_proxy.py  append_cybergym_eval_progress.py  archive_cybergym_eval_diagnostics.py  archive_cybergym_pocs.py  chain_sft_failed8_then_vanilla_qwen36_eval100.sh  compare_cybergym_strategy_eval.py  dashboard.py  download_cybergym_split_data.py  download_hf_transfer_once.py  eval_tinker_strategy_sft.py  featherless_anthropic_proxy.py  filter_cybergym_infra_rows.py  finalize_iterative_improvement_experiment.py  finalize_strategy_sft_eval.sh  mastermind_env.sh  monitor_disk_cleanup.py  prepare_tinker_strategy_sft_data.py  record_cybergym_rollout.py  recover_cybergym_task_level_stats.py  report_strategy_grpo_progress.py  report_strategy_sft_eval.py  resume_codex_cybergym_level3_after_usage_limit.sh  resume_codex_cybergym_reps_7_8_after_usage_limit.sh  retry_grpo_eval200_after_429.sh  run_claude_cybergym_bo_skip_passed.py  run_claude_cybergym_tasks.py  run_claude_cybergym_tasks_parallel.py  run_claude_glm51_cybergym_eval_reps.sh  run_claude_glm51_llmgw_iterative_restore.sh  run_codex_cybergym_bo_skip_passed.py  run_codex_cybergym_eval_reps.sh  (+42 more)
src/: mastermind.py
(+366 files in other folders)
