[project]
name = "mastermind"
version = "0.1.0"
description = "Strategy-level CyberGym experimentation for Mastermind."
requires-python = ">=3.12,<3.13"
dependencies = [
    "cybergym[server]",
    "orjson>=3.11.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mastermind"]

[tool.uv]
package = true

[tool.uv.sources]
cybergym = { path = "cybergym", editable = true }
